fix alignments

--- a/src/app/pages/vault/asset-card/asset-card.component.scss
+++ b/src/app/pages/vault/asset-card/asset-card.component.scss
@@ -218,8 +218,10 @@
     .mAssetIcon-list-sm {
       margin-left: 10px;
     }
+    .mAssetIcon-list{
+      margin-right: 16px;
+    }
     .name-detail {
-      padding-left: 16px;
       padding-top: 5px;
     }
   }
